evidence/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"flask-app-network-policy","namespace":"flask-app"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"flask-app"}}}],"ports":[{"port":5000,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"flask-app"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-09-23T14:02:47Z"
  generation: 1
  name: flask-app-network-policy
  namespace: flask-app
  resourceVersion: "4646"
  uid: f396acef-26a0-4c80-966e-1cf4a5d4f4b2
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flask-app
    ports:
    - port: 5000
      protocol: TCP
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
  - Ingress
